--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://gitlab.com/anom/tagpro#readme",
   "devDependencies": {
-    "browser-sync": "^2.26.10",
+    "browser-sync": "^2.26.14",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
@@ -39,7 +39,8 @@
     "gulp": "^4.0.2",
     "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.7",
     "pg": "^8.5.1",
-    "pug": "^3.0.0"
+    "pug": "^3.0.2"
   }
 }
