--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-size": "^3.0.0",
     "gulp-strip-debug": "^3.0.0",
     "gulp-stylus": "^2.7.0",
+    "gulp-ttf2woff2": "^4.0.1",
     "gulp-uglify-es": "^1.0.4",
     "gulp-watch": "^5.0.1",
     "rsyncwrapper": "^3.0.1",
