--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp": "^4.0.2",
     "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
+    "memory-cache": "^0.2.0",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
     "pug": "^3.0.2",
