--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
+    "d3": "^7.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
@@ -43,8 +44,11 @@
     "jsonwebtoken": "^8.5.1",
     "memory-cache": "^0.2.0",
     "nodemon": "^2.0.7",
+    "openskill": "^1.4.1",
     "pg": "^8.5.1",
     "pug": "^3.0.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "trueskill": "0.0.2",
+    "ts-trueskill": "^3.2.2"
   }
 }
