--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
     "fs": "0.0.1-security",
     "gulp": "^4.0.2",
     "https": "^1.0.0",
+    "jsdom": "^19.0.0",
     "jsonwebtoken": "^8.5.1",
     "memory-cache": "^0.2.0",
-    "nodemon": "^2.0.12",
+    "nodemon": "^2.0.15",
     "openskill": "^1.4.1",
     "pg": "^8.5.1",
     "pug": "^3.0.2",
