--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "openskill": "^1.4.1",
     "pg": "^8.5.1",
     "pug": "^3.0.2",
+    "puppeteer": "^13.1.1",
     "request": "^2.88.2",
     "trueskill": "0.0.2",
     "ts-trueskill": "^3.2.2"
