--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "express": "^4.17.1",
     "express-ipfilter": "^1.2.0",
     "fs": "0.0.1-security",
+    "gray-matter": "^4.0.3",
     "gulp": "^4.0.2",
     "https": "^1.0.0",
     "jsdom": "^19.0.0",
     "jsonwebtoken": "^8.5.1",
+    "markdown-it": "^12.3.2",
     "memory-cache": "^0.2.0",
     "nodemon": "^2.0.15",
     "openskill": "^1.4.1",
