--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "chrono-node": "^2.3.9",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "d3": "^7.0.0",
