--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tagpro",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "Tagpro",
+  "version": "1.1.0",
+  "description": "Tagpro hub",
+  "main": "public/index.js",
   "scripts": {
     "start": "node app",
     "build": "gulp build",
@@ -15,43 +15,45 @@
   "author": "Daniel <@anom>",
   "dependencies": {
     "axios": "^0.21.1",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.0",
     "chrono-node": "^2.3.9",
     "compression": "^1.7.4",
-    "cookie-parser": "^1.4.5",
+    "cookie-parser": "^1.4.6",
     "d3": "^7.0.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "express": "^4.19.1",
     "express-ipfilter": "^1.2.0",
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
-    "gulp": "^4.0.2",
-    "https": "^1.0.0",
     "jsdom": "^19.0.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "markdown-it": "^12.3.2",
     "memory-cache": "^0.2.0",
-    "nodemon": "^2.0.15",
     "openskill": "^1.4.1",
-    "pg": "^8.5.1",
-    "pug": "^3.0.2",
-    "puppeteer": "^13.1.1",
     "request": "^2.88.2",
     "trueskill": "0.0.2",
-    "ts-trueskill": "^3.2.2"
-  },
-  "devDependencies": {
-    "browser-sync": "^2.26.14",
+    "ts-trueskill": "^3.2.2",
+    "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.1",
+    "google-auth-library": "^8.7.0",
+    "googleapis": "^105.0.0",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^4.3.0",
+    "gulp-cli": "^2.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-size": "^3.0.0",
-    "gulp-strip-debug": "^3.0.0",
-    "gulp-stylus": "^2.7.0",
-    "gulp-ttf2woff2": "^4.0.1",
-    "gulp-uglify-es": "^1.0.4",
-    "gulp-watch": "^5.0.1",
-    "rsyncwrapper": "^3.0.1",
-    "run-sequence": "^2.2.1"
+    "gulp-stylus": "^2.7.1",
+    "gulp-uglify-es": "^3.0.0",
+    "gulp-watch": "^4.0.1",
+    "pg": "^8.7.3",
+    "pug": "^3.0.2"
+  },
+  "devDependencies": {
+	"browser-sync": "^2.27.10",
+    "dotenv": "^16.0.1",
+	"nodemon": "^2.0.20",
+	"rsyncwrapper": "^3.0.1"
   }
 }
