--- a/package.json
+++ b/package.json
@@ -20,24 +20,12 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "d3": "^7.0.0",
-    "express": "^4.19.1",
+    "express": "^4.18.1",
     "express-ipfilter": "^1.2.0",
     "fs": "0.0.1-security",
-    "gray-matter": "^4.0.3",
-    "jsdom": "^19.0.0",
-    "jsonwebtoken": "^9.0.0",
-    "markdown-it": "^12.3.2",
-    "memory-cache": "^0.2.0",
-    "openskill": "^1.4.1",
-    "request": "^2.88.2",
-    "trueskill": "0.0.2",
-    "ts-trueskill": "^3.2.2",
-    "body-parser": "^1.20.0",
-    "compression": "^1.7.4",
-    "cookie-parser": "^1.4.6",
-    "express": "^4.18.1",
     "google-auth-library": "^8.7.0",
     "googleapis": "^105.0.0",
+    "gray-matter": "^4.0.3",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^4.3.0",
@@ -45,15 +33,24 @@
     "gulp-concat": "^2.6.1",
     "gulp-size": "^3.0.0",
     "gulp-stylus": "^2.7.1",
+    "gulp-ttf2woff2": "^4.0.1",
     "gulp-uglify-es": "^3.0.0",
     "gulp-watch": "^4.0.1",
+    "jsdom": "^19.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "markdown-it": "^12.3.2",
+    "memory-cache": "^0.2.0",
+    "openskill": "^1.4.1",
     "pg": "^8.7.3",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "request": "^2.88.2",
+    "trueskill": "0.0.2",
+    "ts-trueskill": "^3.2.2"
   },
   "devDependencies": {
-	"browser-sync": "^2.27.10",
+    "browser-sync": "^2.27.10",
     "dotenv": "^16.0.1",
-	"nodemon": "^2.0.20",
-	"rsyncwrapper": "^3.0.1"
+    "nodemon": "^2.0.20",
+    "rsyncwrapper": "^3.0.1"
   }
 }
