--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 ENV=production
 DB=postgresql://doadmin:wvmnsqekrmedir1v@dbserver-do-user-1100407-0.b.db.ondigitalocean.com:25060/tagpro
+REDIS=rediss://default:AVNS_jsVv7fytYPlaZ1SXBz9@calorie-cache-do-user-1100407-0.b.db.ondigitalocean.com:25061
