--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.20.0",
     "chrono-node": "^2.3.9",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
