--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "gulp-watch": "^4.0.1",
     "jsdom": "^19.0.0",
     "markdown-it": "^12.3.2",
-    "memory-cache": "^0.2.0",
     "openskill": "^1.4.1",
     "pg": "^8.7.3",
     "pug": "^3.0.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "route-cache": "^0.6.1"
   },
   "devDependencies": {
     "browser-sync": "^2.27.10",
