--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "pg": "^8.7.3",
     "pug": "^3.0.2",
     "request": "^2.88.2",
-    "route-cache": "^0.6.1"
+    "route-cache": "https://github.com/ramseth001/route-cache"
   },
   "devDependencies": {
     "browser-sync": "^2.27.10",
