--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-watch": "^4.0.1",
     "jsdom": "^19.0.0",
     "markdown-it": "^12.3.2",
+    "node-cron": "^3.0.3",
     "openskill": "^1.4.1",
     "pg": "^8.7.3",
     "pug": "^3.0.2",
