fix playoff gasp

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-ENV=dev
-DB=postgresql://postgres:DIGdog88@144.126.228.254:5432/tagpro
+#ENV=dev
+#DB=postgresql://postgres:DIGdog88@144.126.228.254:5432/tagpro
+ENV=production
+DB=postgresql://doadmin:AVNS_a-P3k2LwNYrxH4QIz5Q@db-postgresql-nyc3-57368-do-user-16388521-0.c.db.ondigitalocean.com:25060/tagpro
