--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.20.0",
+    "chrome": "^0.1.0",
     "chrono-node": "^2.3.9",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -38,6 +39,7 @@
     "openskill": "^1.4.1",
     "pg": "^8.7.3",
     "pug": "^3.0.2",
+    "puppeteer": "^23.5.1",
     "request": "^2.88.2",
     "route-cache": "github:bradoyler/route-cache"
   },
