--- a/package.json
+++ b/package.json
@@ -1,52 +1,45 @@
 {
   "name": "Tagpro",
-  "version": "1.3.0",
-  "description": "Tagpro hub",
+  "version": "2.0.0",
+  "description": "Tagpro Hub",
   "main": "public/index.js",
   "scripts": {
     "start": "node app",
-    "build": "gulp build",
-    "dev": "nodemon app --ignore ./public/ & gulp watch"
+    "build": "gulp esbuild.js --live",
+    "dev": "nodemon app --ignore ./public/ & node esbuild.js --dev"
   },
   "repository": {
     "type": "git",
     "url": "https://gitlab.com/anom/tagpro.dev.git"
   },
-  "author": "Daniel <@anom>",
+  "author": "anom <@anom>",
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^1.9.0",
     "body-parser": "^1.20.0",
     "chrome": "^0.1.0",
     "chrono-node": "^2.3.9",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
+    "esbuild": "^0.25.3",
+    "esbuild-stylus-loader": "^0.4.2",
+	"express": "^4.18.1",
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^6.1.0",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-cli": "^2.3.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-size": "^3.0.0",
-    "gulp-stylus": "^2.7.1",
-    "gulp-ttf2woff2": "^4.0.1",
-    "gulp-uglify-es": "^3.0.0",
-    "gulp-watch": "^4.0.1",
     "jsdom": "^19.0.0",
     "markdown-it": "^12.3.2",
     "node-cron": "^3.0.3",
+    "npm": "^10.1.0",
     "openskill": "^1.4.1",
     "pg": "^8.7.3",
     "pug": "^3.0.2",
-    "puppeteer": "^23.5.1",
     "request": "^2.88.2",
     "route-cache": "github:bradoyler/route-cache"
   },
   "devDependencies": {
-    "browser-sync": "^2.27.10",
+    "browser-sync": "^3.0.4",
     "dotenv": "^16.0.1",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.1.10",
     "rsyncwrapper": "^3.0.1"
   }
 }
